--- a/HTML/B&G/Bookin.html
+++ b/HTML/B&G/Bookin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الحجز</title>
-    <link rel="stylesheet" href="../../CSS/B&GStyle/booking.css">
+    <link rel="stylesheet" href="../../CSS/B&GStyle/bookin.css">
     <link rel="stylesheet" href="../../CSS/header-footer.css">
     <link rel="shortcut icon" type="x-icon" href="../../icons/event-logo.png">
 </head>
